# meatnet-rs

./: .gitignore  Cargo.toml  LICENSE
meateatrs/: Cargo.toml
meateatrs/src/: combustion_device.rs  main.rs  node.rs  probe.rs
meatnet/: Cargo.toml
meatnet/src/: lib.rs  temperature.rs
meatnet/src/uart/: mod.rs  request.rs  response.rs
meatnet/src/uart/node/: mod.rs  node_message.rs  request.rs  response.rs
meatnet/src/uart/node/response/: readlogs.rs
meatnet/src/uart/probe/: request.rs  response.rs
meatweb/: Cargo.toml  Makefile  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
meatweb/src/: bluetooth.rs  chart.rs  history.rs  main.rs
meatweb/src/components/: livetempcontainer.rs  mod.rs
meatweb/style/: output.css
src/: lib.rs  main.btleplug.rs  main.clop.rs  main.manual.rs  main.modular_bitfield.rs  main.nom.rs  main.rs
src/types/: mod.rs
src/types/uart/: mod.rs  request.rs  response.rs
src/uart/: mod.rs
src/uart/node/: mod.rs  request.rs  response.rs
src/uart/node/response/: readlogs.rs
src/uart/probe/: request.rs  response.rs
