[package]
name = "meatnet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
crc = "3.0.1"
btleplug = "0.11.3"
deku = "0.16.0"
futures = "0.3.30"
#leptos = { version = "0.5.4", features = ["csr", "nightly"] }
#leptos-use = "0.9.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
#serde = "1.0.193"
#serde-wasm-bindgen = "0.6.3"
tokio = { version = "1", features = ["full"] }
uuid = "1.6.1"
roaring = "0.10.2"
range-set-blaze = { version = "0.1.14", default-features = false, features = ["alloc"] }
#wasm-bindgen-futures = "0.4.39"
#web-sys = { version = "0.3.66", features = [
#    "Navigator", 
#    "Window", 
#    "Bluetooth", 
#    "RequestDeviceOptions", 
#    "BluetoothLeScanFilterInit", 
#    "BluetoothDevice", 
#    "BluetoothRemoteGattServer", 
#    "BluetoothRemoteGattService",
#    "BluetoothRemoteGattCharacteristic",
#]}
