[package]
name = "meatnet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = [
    "atomic",
    "alloc",
] }
crc = "3.0.1"
deku = { version = "0.18.1", default-features = false, features = [
    "alloc",
    "bits",
] }
rand = { version = "0.9", default-features = false, features = [
    "alloc",
    "small_rng",
    "os_rng",
] }
serde = { version = "1.0.195", default-features = false, features = [
    "derive",
    "alloc",
] }

# uuid = "1.6.1"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", default-features = false, features = [
    "alloc",
] }
