[package]
name = "meateatrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meatnet = { path = "../meatnet" }
bitvec = "1.0.1"
btleplug = "0.11.3"
deku = "0.16.0"
futures = "0.3.30"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
uuid = "1.6.1"
range-set-blaze = { version = "0.1.14", default-features = false, features = ["alloc"] }
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["string"]}
