[package]
name = "meatweb"
version = "0.1.0"
edition = "2021"

[dependencies]
deku = "0.16.0"
meatnet = { path = "../meatnet" }
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos-use = { version = "0.9.0", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.193"
serde-wasm-bindgen = "0.6.3"
uuid = "1.6.1"
wasm-bindgen-futures = "0.4.39"
thaw = "0.1.7"
range-set-blaze = "0.1.14"
itertools = "0.12.0"
gloo = { version = "0.11.0", features = ["timers"]}
charming = { version = "0.3.1", features = ["wasm"] }
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.66"
features = [
    "Navigator", 
    "Window", 
    "Bluetooth", 
    "RequestDeviceOptions", 
    "BluetoothLeScanFilterInit", 
    "BluetoothDevice", 
    "BluetoothRemoteGattServer", 
    "BluetoothRemoteGattService",
    "BluetoothRemoteGattCharacteristic",
]
